# slimTS

./: .gitignore  .gitmodules  AUTHORS  Makefile  Makefile.am  README.md  configure  configure.ac  dep.ts  test.js  util.ts
dev_configurations/: INSTALL.md  bashrc
dev_configurations/etc/ld.so.conf.d/: slim.ld.so.conf
examples/console/: colors.js  dressings.js
include/: nbytes.h  slim.h  slim.hpp
include/csv/: csv.hpp
include/slim/: builtins.h  command_line_handler.h  command_line_handler.hpp  console.hpp  dummy_console_provider.hpp  exception_handler.h  fetch.h  fetch.hpp  gv8.h  launcher.h  log.hpp  macros.h  metrics_server.h  module_resolver.h  objects.h  objects.hpp  path.h  path.hpp  plugin.hpp  slim.h  slim.hpp  utilities.h  utilities.hpp  v8.hpp  veight.hpp
include/slim/builtins/: dummy_console_provider.h  typescript.h
include/slim/common/: exception.h  fetch.h  fetch_and_apply_macros.h  log.h  memory_mapper.h  metrics.h  platform.h  utilities.h
include/slim/module/: import_specifier.h  resolver.h
include/slim/plugin/: loader.h  loader.hpp
include/slim/queue/: queue.h
include/slim/servers/: servers.h  typescript.h
include/slim/service/: launcher.h
lib/custom_definitions/: slim.console.d.ts
lib/typescript/: typescript.internal.d.ts
program/: CMakeLists.txt  README.md  main.cpp
program/examples/console/: colors.js  dressings.js  printf.js  source_location.js
program/include/: color_map.hpp  console.h  console.hpp  console_colors.h  console_configuration.h  console_module.h  console_temp.h  fetch.hpp  http_server.hpp  libuv  log.h  log.hpp  log_configuration.h  logger.hpp  module.h  module.hpp  module_accessors.hpp  modules.h  modules.hpp  server.h  slim.h  slim.hpp  slim_log.hpp  slim_server.hpp  slim_uv.h  slim_v8.h  slim_v8.hpp  system.hpp  utilities.h  utilities.hpp  uv.hpp  v8  v8pp  veight.hpp
program/include/v8pp/: config.hpp
program/src/: console.cpp  console_colors.cpp  console_configuration.cpp  console_module.cpp  http_server.cpp  log.cpp  log_configuration.cpp  module.cpp  modules.cpp  slim.cpp  slim_uv.cpp  slim_v8.cpp  utilities.cpp
samples/: exception.mjs  hello_world.mjs  hello_world_no_import.mjs  load_plugin.js  module.mjs  should_fail.mjs
samples/builtins/: require.js
samples/builtins/typescript/: import.ts
samples/fetch/: fetch.mjs
samples/import/: D.js  import.mjs  require_to_import.js
samples/import/lib/: hello.d.mts  hello_world.d.mts  world.d.mts  world.mjs
samples/network/: basic_listen.js  headers.js
samples/plugins/console/: console_field_seperator.js  console_info.js  console_listen.js  console_print_colors.js
samples/plugins/csv/: json.js
samples/plugins/fs/: constants.js  read_file_sync.mjs  stat.js  write_file_sync.mjs
samples/plugins/kafka/: consumer.mjs
samples/plugins/nodejs/: primordials.js
samples/plugins/os/: os.js
samples/typescript/: hello.ts
skeleton/: help.json  main.ts
skeleton/modules/: program.json
skeleton/modules/main/: module.json
skeleton/modules/render/: index.ts
slim.objects/: README.md  mod.ts  types.ts
slim.view/: README.md  dep.ts  handler.ts  merge.ts  mod.ts  parsers.ts  view.ts
src/: Makefile.am  dummy_console_provider.cpp  example.cpp  http_request.cpp  http_url.cpp  main.cpp  slim.cpp  slim_builtins.cpp  slim_builtins_dummy_console_provider.cpp  slim_builtins_typescript.cpp  slim_command_line_handler.cpp  slim_common_fetch.cpp  slim_common_fetch_and_apply_macros.cpp  slim_common_http.cpp  slim_common_http_header.cpp  slim_common_http_parser.cpp  slim_common_http_request.cpp  slim_common_http_response.cpp  slim_common_log.cpp  slim_common_memory_mapper.cpp  slim_common_metrics.cpp  slim_common_network_address_set.cpp  slim_common_network_client_connection_handler_common.cpp  slim_common_network_client_request_handler_metrics.cpp  slim_common_network_listener.cpp  slim_common_utilities.cpp  slim_exception_handler.cpp  slim_gv8.cpp  slim_launcher.cpp  slim_macros.cpp  slim_metrics_server.cpp  slim_module_import_specifier.cpp  slim_module_resolver.cpp  slim_network_fetch.cpp  slim_network_http_headers.cpp  slim_network_http_request.cpp  slim_network_http_response.cpp  slim_objects.cpp  slim_path.cpp  slim_plugin_loader.cpp  (+4 more)
src/plugins/boringssl/: Makefile.am  boringssl.cpp
src/plugins/console/: Makefile.am  console.cpp  console_sample.cpp  test_console.cpp
src/plugins/csv/: Makefile.am  csv.cpp
src/plugins/fs/: Makefile.am  fs.cpp
src/plugins/http_package/: Makefile.am  http_package.cpp
src/plugins/kafka/: Makefile.am  kafka.cpp
src/plugins/memoryAdaptor/: Makefile.am  memory_adaptor.cpp
src/plugins/network/: Makefile.am  network.cpp
src/plugins/nodejs/: Makefile.am  slim_node.cpp
src/plugins/nodejs/lib/internal/: assert.mjs
src/plugins/nodejs/lib/internal/per_context/: primordials.js  primordials.min.js
src/plugins/os/: Makefile.am  os.cpp
src/plugins/path/: Makefile.am  path.cpp
src/plugins/process/: Makefile.am  process.cpp
src/plugins/queue/: Makefile.am  queue.cpp
src/plugins/rapidcsv/: Makefile.am  rapidcsv.cpp
src/servers/: slim_builtins_typescript.cpp
src/ts/: module.ts  slim.types.ts
src/ts/lib/: slim.types.ts
src/utilities/file_to_hex_array/: CMakeLists.txt
src/utilities/file_to_hex_array/src/: main.cpp
test/: argv.js  console.js  console_configuration.js  load_plugin.js  main.mjs  simple.js  throw_exception.js  throw_exception.mjs
test/builtins/: require.js
test/console/: console_time_stamp.js
test/fs/: readFileUtf8.js
test/http/: headers.js
test/import/: import.js  import.mjs
test/import/lib/: hello.mjs  hello_world.mjs
test/kafka/: consumer.mjs  producer.mjs  simple.js
test/kafka/lib/: functions.js  message.js
test/network/: fetch.js
test/nodejs/: buffer.mjs  test.mjs
test/os/: os.js
test/plugins/console/: console_time_stamp.js
test/plugins/fs/: memory_adaptor_read_file.mjs  (+2 more)
test/preprocessor/: __filename.mjs  macros.js
test/process/: load_process.mjs
utilities/: .gitignore  CMakeLists.txt  README.md
utilities/file_to_hex_array/: CMakeLists.txt  README.md
(+32 files in other folders)
