SUBDIRS = src
SUBDIRS += src/plugins/console
SUBDIRS += src/plugins/csv
SUBDIRS += src/plugins/fs
SUBDIRS += src/plugins/kafka
SUBDIRS += src/plugins/network
SUBDIRS += src/plugins/memoryAdaptor
SUBDIRS += src/plugins/os
SUBDIRS += src/plugins/path
SUBDIRS += src/plugins/process

slim:
	@cd src && make
