SUBDIRS = src
SUBDIRS += src/plugins/console
SUBDIRS += src/plugins/csv
SUBDIRS += src/plugins/fs
SUBDIRS += src/plugins/kafka
SUBDIRS += src/plugins/memoryAdaptor
SUBDIRS += src/plugins/os
SUBDIRS += src/plugins/path
SUBDIRS += src/plugins/process
SUBDIRS += src/plugins/queue

slim:
	@cd src && make
